--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,17 @@
     <section hidden id="user">
       <h2>Hello <span class="username"></span>!</h2>
     </section>
+    <br /><br />
+    <section id="fragment">
+      <form id="fragmentForm" onsubmit="return false">
+        <label for="textFragment"><h3>Enter some text:</h3></label><br />
+        <input type="text" id="textFragment" name="textFragment" /><br /><br />
+        <input
+          id="fragmentsubmit"
+          type="submit"
+          value="Click to create a new Fragment!"
+        />
+      </form>
+    </section>
   </body>
 </html>
